// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Vault card should match snapshot of active vault 1`] = `
<View
  style={
    Array [
      Object {
        "borderBottomLeftRadius": 4,
        "borderBottomRightRadius": 4,
        "borderBottomWidth": 1,
        "borderLeftWidth": 1,
        "borderRightWidth": 1,
        "borderTopLeftRadius": 4,
        "borderTopRightRadius": 4,
        "borderTopWidth": 1,
        "marginBottom": 8,
        "paddingBottom": 16,
        "paddingLeft": 16,
        "paddingRight": 16,
        "paddingTop": 16,
      },
      Object {
        "backgroundColor": "rgba(255, 255, 255, 1)",
        "borderBottomColor": "rgba(229, 229, 229, 1)",
        "borderLeftColor": "rgba(229, 229, 229, 1)",
        "borderRightColor": "rgba(229, 229, 229, 1)",
        "borderTopColor": "rgba(229, 229, 229, 1)",
      },
    ]
  }
>
  <View
    accessible={true}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "borderBottomWidth": 0,
        "opacity": 1,
      }
    }
  >
    <View
      style={
        Object {
          "display": "flex",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "marginBottom": 16,
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "display": "flex",
            "flexDirection": "row",
          }
        }
      >
        <View
          style={
            Object {
              "display": "flex",
              "flexDirection": "column",
            }
          }
        >
          <View
            style={
              Object {
                "display": "flex",
                "flexDirection": "row",
              }
            }
          >
            <View
              style={
                Object {
                  "display": "flex",
                  "flexDirection": "column",
                }
              }
            >
              <Text
                style={
                  Array [
                    Object {
                      "fontFamily": "RegularFont",
                      "fontSize": 16,
                      "fontWeight": "400",
                      "lineHeight": 24,
                    },
                    Array [
                      Object {
                        "fontSize": 12,
                        "lineHeight": 16,
                        "marginRight": 6,
                      },
                      Object {
                        "color": "rgba(163, 163, 163, 1)",
                      },
                    ],
                  ]
                }
              >
                Vault ID
              </Text>
              <Text
                ellipsizeMode="middle"
                numberOfLines={1}
                style={
                  Array [
                    Object {
                      "fontFamily": "RegularFont",
                      "fontSize": 16,
                      "fontWeight": "400",
                      "lineHeight": 24,
                    },
                    Array [
                      Object {
                        "flexShrink": 1,
                        "fontFamily": "SemiBoldFont",
                        "fontWeight": "600",
                        "width": 176,
                      },
                      Object {
                        "color": "rgba(0, 0, 0, 1)",
                      },
                    ],
                  ]
                }
              >
                22ffasd5ca123123123123123121231061
              </Text>
            </View>
          </View>
          <View
            style={
              Object {
                "display": "flex",
                "flexDirection": "row",
              }
            }
          >
            <Text
              style={
                Array [
                  Object {
                    "fontFamily": "RegularFont",
                    "fontSize": 16,
                    "fontWeight": "400",
                    "lineHeight": 24,
                  },
                  Array [
                    Object {
                      "fontSize": 12,
                      "lineHeight": 16,
                      "marginRight": 4,
                    },
                    Object {
                      "color": "rgba(115, 115, 115, 1)",
                    },
                  ],
                ]
              }
            >
              Collaterals:
            </Text>
            <Text
              style={
                Array [
                  Object {
                    "fontFamily": "RegularFont",
                    "fontSize": 16,
                    "fontWeight": "400",
                    "lineHeight": 24,
                  },
                  Array [
                    Object {
                      "fontSize": 12,
                      "lineHeight": 16,
                      "marginLeft": 4,
                    },
                    Object {
                      "color": "rgba(115, 115, 115, 1)",
                    },
                  ],
                ]
              }
            >
              None
            </Text>
            <View
              style={
                Object {
                  "display": "flex",
                  "flexDirection": "row",
                }
              }
            />
          </View>
        </View>
      </View>
    </View>
    <View
      style={
        Object {
          "display": "flex",
          "flexDirection": "row",
          "flexWrap": "wrap",
          "marginBottom": -8,
        }
      }
    >
      <View
        style={
          Object {
            "marginBottom": 8,
            "width": "50%",
          }
        }
      >
        <Text
          style={
            Array [
              Object {
                "fontFamily": "RegularFont",
                "fontSize": 16,
                "fontWeight": "400",
                "lineHeight": 24,
              },
              Array [
                Object {
                  "fontSize": 12,
                  "lineHeight": 16,
                },
                Object {
                  "color": "rgba(115, 115, 115, 1)",
                },
              ],
            ]
          }
        >
          Total loan amount (USD)
        </Text>
        <Text
          style={
            Array [
              Object {
                "fontFamily": "RegularFont",
                "fontSize": 16,
                "fontWeight": "400",
                "lineHeight": 24,
              },
              Array [
                Array [
                  Object {
                    "fontFamily": "SemiBoldFont",
                    "fontSize": 14,
                    "fontWeight": "600",
                    "lineHeight": 20,
                  },
                  undefined,
                ],
                Object {
                  "color": "rgba(23, 23, 23, 1)",
                },
              ],
            ]
          }
        >
          $100
        </Text>
      </View>
      <View
        style={
          Object {
            "marginBottom": 8,
            "width": "50%",
          }
        }
      >
        <Text
          style={
            Array [
              Object {
                "fontFamily": "RegularFont",
                "fontSize": 16,
                "fontWeight": "400",
                "lineHeight": 24,
              },
              Array [
                Object {
                  "fontSize": 12,
                  "lineHeight": 16,
                },
                Object {
                  "color": "rgba(115, 115, 115, 1)",
                },
              ],
            ]
          }
        >
          Collateral amount (USD)
        </Text>
        <Text
          style={
            Array [
              Object {
                "fontFamily": "RegularFont",
                "fontSize": 16,
                "fontWeight": "400",
                "lineHeight": 24,
              },
              Array [
                Array [
                  Object {
                    "fontFamily": "SemiBoldFont",
                    "fontSize": 14,
                    "fontWeight": "600",
                    "lineHeight": 20,
                  },
                  undefined,
                ],
                Object {
                  "color": "rgba(23, 23, 23, 1)",
                },
              ],
            ]
          }
        >
          n/a
        </Text>
      </View>
      <View
        style={
          Object {
            "marginBottom": 8,
            "width": "50%",
          }
        }
      >
        <Text
          style={
            Array [
              Object {
                "fontFamily": "RegularFont",
                "fontSize": 16,
                "fontWeight": "400",
                "lineHeight": 24,
              },
              Array [
                Object {
                  "fontSize": 12,
                  "lineHeight": 16,
                },
                Object {
                  "color": "rgba(115, 115, 115, 1)",
                },
              ],
            ]
          }
        >
          Collateral ratio
        </Text>
        <Text
          style={
            Array [
              Object {
                "fontFamily": "RegularFont",
                "fontSize": 16,
                "fontWeight": "400",
                "lineHeight": 24,
              },
              Array [
                Array [
                  Object {
                    "fontFamily": "SemiBoldFont",
                    "fontSize": 14,
                    "fontWeight": "600",
                    "lineHeight": 20,
                  },
                  undefined,
                ],
                Object {
                  "color": "rgba(2, 179, 27, 1)",
                },
              ],
            ]
          }
        >
          n/a
        </Text>
      </View>
    </View>
  </View>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "display": "flex",
          "flexDirection": "row",
          "flexWrap": "wrap",
          "marginBottom": -8,
          "marginTop": 16,
        },
        Object {
          "borderBottomColor": "rgba(229, 229, 229, 1)",
          "borderLeftColor": "rgba(229, 229, 229, 1)",
          "borderRightColor": "rgba(229, 229, 229, 1)",
          "borderTopColor": "rgba(229, 229, 229, 1)",
        },
      ]
    }
  >
    <View
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "rgba(255, 255, 255, 1)",
          "borderBottomColor": "rgba(212, 212, 212, 1)",
          "borderBottomLeftRadius": 4,
          "borderBottomRightRadius": 4,
          "borderBottomWidth": 1,
          "borderLeftColor": "rgba(212, 212, 212, 1)",
          "borderLeftWidth": 1,
          "borderRightColor": "rgba(212, 212, 212, 1)",
          "borderRightWidth": 1,
          "borderTopColor": "rgba(212, 212, 212, 1)",
          "borderTopLeftRadius": 4,
          "borderTopRightRadius": 4,
          "borderTopWidth": 1,
          "flexDirection": "row",
          "marginBottom": 8,
          "marginRight": 8,
          "opacity": 1,
          "paddingBottom": 4,
          "paddingLeft": 4,
          "paddingRight": 4,
          "paddingTop": 4,
        }
      }
    >
      <Text
        allowFontScaling={false}
        style={
          Array [
            Object {
              "color": undefined,
              "fontSize": 16,
            },
            Array [
              undefined,
              Object {
                "color": "rgba(255, 0, 175, 1)",
              },
            ],
            Object {
              "fontFamily": "material",
              "fontStyle": "normal",
              "fontWeight": "normal",
            },
            Object {},
          ]
        }
      >
        
      </Text>
      <Text
        style={
          Array [
            Object {
              "fontFamily": "RegularFont",
              "fontSize": 16,
              "fontWeight": "400",
              "lineHeight": 24,
            },
            Array [
              Object {
                "fontFamily": "MediumFont",
                "fontSize": 14,
                "fontWeight": "500",
                "lineHeight": 16,
                "paddingLeft": 4,
                "paddingRight": 4,
              },
              Object {
                "color": "rgba(255, 0, 175, 1)",
              },
            ],
          ]
        }
      >
        EDIT COLLATERALS
      </Text>
    </View>
  </View>
</View>
`;

exports[`Vault card should match snapshot of at-risk vault 1`] = `
<View
  style={
    Array [
      Object {
        "borderBottomLeftRadius": 4,
        "borderBottomRightRadius": 4,
        "borderBottomWidth": 1,
        "borderLeftWidth": 1,
        "borderRightWidth": 1,
        "borderTopLeftRadius": 4,
        "borderTopRightRadius": 4,
        "borderTopWidth": 1,
        "marginBottom": 8,
        "paddingBottom": 16,
        "paddingLeft": 16,
        "paddingRight": 16,
        "paddingTop": 16,
      },
      Object {
        "backgroundColor": "rgba(255, 255, 255, 1)",
        "borderBottomColor": "rgba(229, 229, 229, 1)",
        "borderLeftColor": "rgba(229, 229, 229, 1)",
        "borderRightColor": "rgba(229, 229, 229, 1)",
        "borderTopColor": "rgba(229, 229, 229, 1)",
      },
    ]
  }
>
  <View
    accessible={true}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "borderBottomWidth": 0,
        "opacity": 1,
      }
    }
  >
    <View
      style={
        Object {
          "display": "flex",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "marginBottom": 16,
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "display": "flex",
            "flexDirection": "row",
          }
        }
      >
        <View
          style={
            Object {
              "display": "flex",
              "flexDirection": "column",
            }
          }
        >
          <View
            style={
              Object {
                "display": "flex",
                "flexDirection": "row",
              }
            }
          >
            <View
              style={
                Object {
                  "display": "flex",
                  "flexDirection": "column",
                }
              }
            >
              <Text
                style={
                  Array [
                    Object {
                      "fontFamily": "RegularFont",
                      "fontSize": 16,
                      "fontWeight": "400",
                      "lineHeight": 24,
                    },
                    Array [
                      Object {
                        "fontSize": 12,
                        "lineHeight": 16,
                        "marginRight": 6,
                      },
                      Object {
                        "color": "rgba(163, 163, 163, 1)",
                      },
                    ],
                  ]
                }
              >
                Vault ID
              </Text>
              <Text
                ellipsizeMode="middle"
                numberOfLines={1}
                style={
                  Array [
                    Object {
                      "fontFamily": "RegularFont",
                      "fontSize": 16,
                      "fontWeight": "400",
                      "lineHeight": 24,
                    },
                    Array [
                      Object {
                        "flexShrink": 1,
                        "fontFamily": "SemiBoldFont",
                        "fontWeight": "600",
                        "width": 176,
                      },
                      Object {
                        "color": "rgba(0, 0, 0, 1)",
                      },
                    ],
                  ]
                }
              >
                22ffasd5ca123123123123123121231061
              </Text>
            </View>
          </View>
          <View
            style={
              Object {
                "display": "flex",
                "flexDirection": "row",
              }
            }
          >
            <Text
              style={
                Array [
                  Object {
                    "fontFamily": "RegularFont",
                    "fontSize": 16,
                    "fontWeight": "400",
                    "lineHeight": 24,
                  },
                  Array [
                    Object {
                      "fontSize": 12,
                      "lineHeight": 16,
                      "marginRight": 4,
                    },
                    Object {
                      "color": "rgba(115, 115, 115, 1)",
                    },
                  ],
                ]
              }
            >
              Collaterals:
            </Text>
            <Text
              style={
                Array [
                  Object {
                    "fontFamily": "RegularFont",
                    "fontSize": 16,
                    "fontWeight": "400",
                    "lineHeight": 24,
                  },
                  Array [
                    Object {
                      "fontSize": 12,
                      "lineHeight": 16,
                      "marginLeft": 4,
                    },
                    Object {
                      "color": "rgba(115, 115, 115, 1)",
                    },
                  ],
                ]
              }
            >
              None
            </Text>
            <View
              style={
                Object {
                  "display": "flex",
                  "flexDirection": "row",
                }
              }
            />
          </View>
        </View>
      </View>
    </View>
    <View
      style={
        Object {
          "display": "flex",
          "flexDirection": "row",
          "flexWrap": "wrap",
          "marginBottom": -8,
        }
      }
    >
      <View
        style={
          Object {
            "marginBottom": 8,
            "width": "50%",
          }
        }
      >
        <Text
          style={
            Array [
              Object {
                "fontFamily": "RegularFont",
                "fontSize": 16,
                "fontWeight": "400",
                "lineHeight": 24,
              },
              Array [
                Object {
                  "fontSize": 12,
                  "lineHeight": 16,
                },
                Object {
                  "color": "rgba(115, 115, 115, 1)",
                },
              ],
            ]
          }
        >
          Total loan amount (USD)
        </Text>
        <Text
          style={
            Array [
              Object {
                "fontFamily": "RegularFont",
                "fontSize": 16,
                "fontWeight": "400",
                "lineHeight": 24,
              },
              Array [
                Array [
                  Object {
                    "fontFamily": "SemiBoldFont",
                    "fontSize": 14,
                    "fontWeight": "600",
                    "lineHeight": 20,
                  },
                  undefined,
                ],
                Object {
                  "color": "rgba(23, 23, 23, 1)",
                },
              ],
            ]
          }
        >
          $100
        </Text>
      </View>
      <View
        style={
          Object {
            "marginBottom": 8,
            "width": "50%",
          }
        }
      >
        <Text
          style={
            Array [
              Object {
                "fontFamily": "RegularFont",
                "fontSize": 16,
                "fontWeight": "400",
                "lineHeight": 24,
              },
              Array [
                Object {
                  "fontSize": 12,
                  "lineHeight": 16,
                },
                Object {
                  "color": "rgba(115, 115, 115, 1)",
                },
              ],
            ]
          }
        >
          Collateral amount (USD)
        </Text>
        <Text
          style={
            Array [
              Object {
                "fontFamily": "RegularFont",
                "fontSize": 16,
                "fontWeight": "400",
                "lineHeight": 24,
              },
              Array [
                Array [
                  Object {
                    "fontFamily": "SemiBoldFont",
                    "fontSize": 14,
                    "fontWeight": "600",
                    "lineHeight": 20,
                  },
                  undefined,
                ],
                Object {
                  "color": "rgba(23, 23, 23, 1)",
                },
              ],
            ]
          }
        >
          n/a
        </Text>
      </View>
      <View
        style={
          Object {
            "marginBottom": 8,
            "width": "50%",
          }
        }
      >
        <Text
          style={
            Array [
              Object {
                "fontFamily": "RegularFont",
                "fontSize": 16,
                "fontWeight": "400",
                "lineHeight": 24,
              },
              Array [
                Object {
                  "fontSize": 12,
                  "lineHeight": 16,
                },
                Object {
                  "color": "rgba(115, 115, 115, 1)",
                },
              ],
            ]
          }
        >
          Collateral ratio
        </Text>
        <Text
          style={
            Array [
              Object {
                "fontFamily": "RegularFont",
                "fontSize": 16,
                "fontWeight": "400",
                "lineHeight": 24,
              },
              Array [
                Array [
                  Object {
                    "fontFamily": "SemiBoldFont",
                    "fontSize": 14,
                    "fontWeight": "600",
                    "lineHeight": 20,
                  },
                  undefined,
                ],
                Object {
                  "color": "rgba(2, 179, 27, 1)",
                },
              ],
            ]
          }
        >
          n/a
        </Text>
      </View>
    </View>
  </View>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "display": "flex",
          "flexDirection": "row",
          "flexWrap": "wrap",
          "marginBottom": -8,
          "marginTop": 16,
        },
        Object {
          "borderBottomColor": "rgba(229, 229, 229, 1)",
          "borderLeftColor": "rgba(229, 229, 229, 1)",
          "borderRightColor": "rgba(229, 229, 229, 1)",
          "borderTopColor": "rgba(229, 229, 229, 1)",
        },
      ]
    }
  >
    <View
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "rgba(255, 255, 255, 1)",
          "borderBottomColor": "rgba(212, 212, 212, 1)",
          "borderBottomLeftRadius": 4,
          "borderBottomRightRadius": 4,
          "borderBottomWidth": 1,
          "borderLeftColor": "rgba(212, 212, 212, 1)",
          "borderLeftWidth": 1,
          "borderRightColor": "rgba(212, 212, 212, 1)",
          "borderRightWidth": 1,
          "borderTopColor": "rgba(212, 212, 212, 1)",
          "borderTopLeftRadius": 4,
          "borderTopRightRadius": 4,
          "borderTopWidth": 1,
          "flexDirection": "row",
          "marginBottom": 8,
          "marginRight": 8,
          "opacity": 1,
          "paddingBottom": 4,
          "paddingLeft": 4,
          "paddingRight": 4,
          "paddingTop": 4,
        }
      }
    >
      <Text
        allowFontScaling={false}
        style={
          Array [
            Object {
              "color": undefined,
              "fontSize": 16,
            },
            Array [
              undefined,
              Object {
                "color": "rgba(255, 0, 175, 1)",
              },
            ],
            Object {
              "fontFamily": "material",
              "fontStyle": "normal",
              "fontWeight": "normal",
            },
            Object {},
          ]
        }
      >
        
      </Text>
      <Text
        style={
          Array [
            Object {
              "fontFamily": "RegularFont",
              "fontSize": 16,
              "fontWeight": "400",
              "lineHeight": 24,
            },
            Array [
              Object {
                "fontFamily": "MediumFont",
                "fontSize": 14,
                "fontWeight": "500",
                "lineHeight": 16,
                "paddingLeft": 4,
                "paddingRight": 4,
              },
              Object {
                "color": "rgba(255, 0, 175, 1)",
              },
            ],
          ]
        }
      >
        EDIT COLLATERALS
      </Text>
    </View>
  </View>
</View>
`;

exports[`Vault card should match snapshot of healthy vault 1`] = `
<View
  style={
    Array [
      Object {
        "borderBottomLeftRadius": 4,
        "borderBottomRightRadius": 4,
        "borderBottomWidth": 1,
        "borderLeftWidth": 1,
        "borderRightWidth": 1,
        "borderTopLeftRadius": 4,
        "borderTopRightRadius": 4,
        "borderTopWidth": 1,
        "marginBottom": 8,
        "paddingBottom": 16,
        "paddingLeft": 16,
        "paddingRight": 16,
        "paddingTop": 16,
      },
      Object {
        "backgroundColor": "rgba(255, 255, 255, 1)",
        "borderBottomColor": "rgba(229, 229, 229, 1)",
        "borderLeftColor": "rgba(229, 229, 229, 1)",
        "borderRightColor": "rgba(229, 229, 229, 1)",
        "borderTopColor": "rgba(229, 229, 229, 1)",
      },
    ]
  }
>
  <View
    accessible={true}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "borderBottomWidth": 0,
        "opacity": 1,
      }
    }
  >
    <View
      style={
        Object {
          "display": "flex",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "marginBottom": 16,
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "display": "flex",
            "flexDirection": "row",
          }
        }
      >
        <View
          style={
            Object {
              "display": "flex",
              "flexDirection": "column",
            }
          }
        >
          <View
            style={
              Object {
                "display": "flex",
                "flexDirection": "row",
              }
            }
          >
            <View
              style={
                Object {
                  "display": "flex",
                  "flexDirection": "column",
                }
              }
            >
              <Text
                style={
                  Array [
                    Object {
                      "fontFamily": "RegularFont",
                      "fontSize": 16,
                      "fontWeight": "400",
                      "lineHeight": 24,
                    },
                    Array [
                      Object {
                        "fontSize": 12,
                        "lineHeight": 16,
                        "marginRight": 6,
                      },
                      Object {
                        "color": "rgba(163, 163, 163, 1)",
                      },
                    ],
                  ]
                }
              >
                Vault ID
              </Text>
              <Text
                ellipsizeMode="middle"
                numberOfLines={1}
                style={
                  Array [
                    Object {
                      "fontFamily": "RegularFont",
                      "fontSize": 16,
                      "fontWeight": "400",
                      "lineHeight": 24,
                    },
                    Array [
                      Object {
                        "flexShrink": 1,
                        "fontFamily": "SemiBoldFont",
                        "fontWeight": "600",
                        "width": 176,
                      },
                      Object {
                        "color": "rgba(0, 0, 0, 1)",
                      },
                    ],
                  ]
                }
              >
                22ffasd5ca123123123123123121231061
              </Text>
            </View>
          </View>
          <View
            style={
              Object {
                "display": "flex",
                "flexDirection": "row",
              }
            }
          >
            <Text
              style={
                Array [
                  Object {
                    "fontFamily": "RegularFont",
                    "fontSize": 16,
                    "fontWeight": "400",
                    "lineHeight": 24,
                  },
                  Array [
                    Object {
                      "fontSize": 12,
                      "lineHeight": 16,
                      "marginRight": 4,
                    },
                    Object {
                      "color": "rgba(115, 115, 115, 1)",
                    },
                  ],
                ]
              }
            >
              Collaterals:
            </Text>
            <Text
              style={
                Array [
                  Object {
                    "fontFamily": "RegularFont",
                    "fontSize": 16,
                    "fontWeight": "400",
                    "lineHeight": 24,
                  },
                  Array [
                    Object {
                      "fontSize": 12,
                      "lineHeight": 16,
                      "marginLeft": 4,
                    },
                    Object {
                      "color": "rgba(115, 115, 115, 1)",
                    },
                  ],
                ]
              }
            >
              None
            </Text>
            <View
              style={
                Object {
                  "display": "flex",
                  "flexDirection": "row",
                }
              }
            />
          </View>
        </View>
      </View>
    </View>
    <View
      style={
        Object {
          "display": "flex",
          "flexDirection": "row",
          "flexWrap": "wrap",
          "marginBottom": -8,
        }
      }
    >
      <View
        style={
          Object {
            "marginBottom": 8,
            "width": "50%",
          }
        }
      >
        <Text
          style={
            Array [
              Object {
                "fontFamily": "RegularFont",
                "fontSize": 16,
                "fontWeight": "400",
                "lineHeight": 24,
              },
              Array [
                Object {
                  "fontSize": 12,
                  "lineHeight": 16,
                },
                Object {
                  "color": "rgba(115, 115, 115, 1)",
                },
              ],
            ]
          }
        >
          Total loan amount (USD)
        </Text>
        <Text
          style={
            Array [
              Object {
                "fontFamily": "RegularFont",
                "fontSize": 16,
                "fontWeight": "400",
                "lineHeight": 24,
              },
              Array [
                Array [
                  Object {
                    "fontFamily": "SemiBoldFont",
                    "fontSize": 14,
                    "fontWeight": "600",
                    "lineHeight": 20,
                  },
                  undefined,
                ],
                Object {
                  "color": "rgba(23, 23, 23, 1)",
                },
              ],
            ]
          }
        >
          $100
        </Text>
      </View>
      <View
        style={
          Object {
            "marginBottom": 8,
            "width": "50%",
          }
        }
      >
        <Text
          style={
            Array [
              Object {
                "fontFamily": "RegularFont",
                "fontSize": 16,
                "fontWeight": "400",
                "lineHeight": 24,
              },
              Array [
                Object {
                  "fontSize": 12,
                  "lineHeight": 16,
                },
                Object {
                  "color": "rgba(115, 115, 115, 1)",
                },
              ],
            ]
          }
        >
          Collateral amount (USD)
        </Text>
        <Text
          style={
            Array [
              Object {
                "fontFamily": "RegularFont",
                "fontSize": 16,
                "fontWeight": "400",
                "lineHeight": 24,
              },
              Array [
                Array [
                  Object {
                    "fontFamily": "SemiBoldFont",
                    "fontSize": 14,
                    "fontWeight": "600",
                    "lineHeight": 20,
                  },
                  undefined,
                ],
                Object {
                  "color": "rgba(23, 23, 23, 1)",
                },
              ],
            ]
          }
        >
          n/a
        </Text>
      </View>
      <View
        style={
          Object {
            "marginBottom": 8,
            "width": "50%",
          }
        }
      >
        <Text
          style={
            Array [
              Object {
                "fontFamily": "RegularFont",
                "fontSize": 16,
                "fontWeight": "400",
                "lineHeight": 24,
              },
              Array [
                Object {
                  "fontSize": 12,
                  "lineHeight": 16,
                },
                Object {
                  "color": "rgba(115, 115, 115, 1)",
                },
              ],
            ]
          }
        >
          Collateral ratio
        </Text>
        <Text
          style={
            Array [
              Object {
                "fontFamily": "RegularFont",
                "fontSize": 16,
                "fontWeight": "400",
                "lineHeight": 24,
              },
              Array [
                Array [
                  Object {
                    "fontFamily": "SemiBoldFont",
                    "fontSize": 14,
                    "fontWeight": "600",
                    "lineHeight": 20,
                  },
                  undefined,
                ],
                Object {
                  "color": "rgba(2, 179, 27, 1)",
                },
              ],
            ]
          }
        >
          n/a
        </Text>
      </View>
    </View>
  </View>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "display": "flex",
          "flexDirection": "row",
          "flexWrap": "wrap",
          "marginBottom": -8,
          "marginTop": 16,
        },
        Object {
          "borderBottomColor": "rgba(229, 229, 229, 1)",
          "borderLeftColor": "rgba(229, 229, 229, 1)",
          "borderRightColor": "rgba(229, 229, 229, 1)",
          "borderTopColor": "rgba(229, 229, 229, 1)",
        },
      ]
    }
  >
    <View
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "rgba(255, 255, 255, 1)",
          "borderBottomColor": "rgba(212, 212, 212, 1)",
          "borderBottomLeftRadius": 4,
          "borderBottomRightRadius": 4,
          "borderBottomWidth": 1,
          "borderLeftColor": "rgba(212, 212, 212, 1)",
          "borderLeftWidth": 1,
          "borderRightColor": "rgba(212, 212, 212, 1)",
          "borderRightWidth": 1,
          "borderTopColor": "rgba(212, 212, 212, 1)",
          "borderTopLeftRadius": 4,
          "borderTopRightRadius": 4,
          "borderTopWidth": 1,
          "flexDirection": "row",
          "marginBottom": 8,
          "marginRight": 8,
          "opacity": 1,
          "paddingBottom": 4,
          "paddingLeft": 4,
          "paddingRight": 4,
          "paddingTop": 4,
        }
      }
    >
      <Text
        allowFontScaling={false}
        style={
          Array [
            Object {
              "color": undefined,
              "fontSize": 16,
            },
            Array [
              undefined,
              Object {
                "color": "rgba(255, 0, 175, 1)",
              },
            ],
            Object {
              "fontFamily": "material",
              "fontStyle": "normal",
              "fontWeight": "normal",
            },
            Object {},
          ]
        }
      >
        
      </Text>
      <Text
        style={
          Array [
            Object {
              "fontFamily": "RegularFont",
              "fontSize": 16,
              "fontWeight": "400",
              "lineHeight": 24,
            },
            Array [
              Object {
                "fontFamily": "MediumFont",
                "fontSize": 14,
                "fontWeight": "500",
                "lineHeight": 16,
                "paddingLeft": 4,
                "paddingRight": 4,
              },
              Object {
                "color": "rgba(255, 0, 175, 1)",
              },
            ],
          ]
        }
      >
        EDIT COLLATERALS
      </Text>
    </View>
  </View>
</View>
`;

exports[`Vault card should match snapshot of liquidated vault 1`] = `
<View
  style={
    Array [
      Object {
        "borderBottomLeftRadius": 4,
        "borderBottomRightRadius": 4,
        "borderBottomWidth": 1,
        "borderLeftWidth": 1,
        "borderRightWidth": 1,
        "borderTopLeftRadius": 4,
        "borderTopRightRadius": 4,
        "borderTopWidth": 1,
        "marginBottom": 8,
        "paddingBottom": 16,
        "paddingLeft": 16,
        "paddingRight": 16,
        "paddingTop": 16,
      },
      Object {
        "backgroundColor": "rgba(255, 255, 255, 1)",
        "borderBottomColor": "rgba(229, 229, 229, 1)",
        "borderLeftColor": "rgba(229, 229, 229, 1)",
        "borderRightColor": "rgba(229, 229, 229, 1)",
        "borderTopColor": "rgba(229, 229, 229, 1)",
      },
    ]
  }
>
  <View
    accessible={true}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "borderBottomWidth": 0,
        "opacity": 1,
      }
    }
  >
    <View
      style={
        Object {
          "display": "flex",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "marginBottom": 16,
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "display": "flex",
            "flexDirection": "row",
          }
        }
      >
        <View
          style={
            Object {
              "display": "flex",
              "flexDirection": "column",
            }
          }
        >
          <View
            style={
              Object {
                "display": "flex",
                "flexDirection": "row",
              }
            }
          >
            <View
              style={
                Object {
                  "display": "flex",
                  "flexDirection": "column",
                }
              }
            >
              <Text
                style={
                  Array [
                    Object {
                      "fontFamily": "RegularFont",
                      "fontSize": 16,
                      "fontWeight": "400",
                      "lineHeight": 24,
                    },
                    Array [
                      Object {
                        "fontSize": 12,
                        "lineHeight": 16,
                        "marginRight": 6,
                      },
                      Object {
                        "color": "rgba(163, 163, 163, 1)",
                      },
                    ],
                  ]
                }
              >
                Vault ID
              </Text>
              <Text
                ellipsizeMode="middle"
                numberOfLines={1}
                style={
                  Array [
                    Object {
                      "fontFamily": "RegularFont",
                      "fontSize": 16,
                      "fontWeight": "400",
                      "lineHeight": 24,
                    },
                    Array [
                      Object {
                        "flexShrink": 1,
                        "fontFamily": "SemiBoldFont",
                        "fontWeight": "600",
                        "width": 176,
                      },
                      Object {
                        "color": "rgba(0, 0, 0, 1)",
                      },
                    ],
                  ]
                }
              >
                22ffasd5ca123123123123123121231061
              </Text>
            </View>
          </View>
          <View
            style={
              Object {
                "display": "flex",
                "flexDirection": "row",
              }
            }
          >
            <Text
              style={
                Array [
                  Object {
                    "fontFamily": "RegularFont",
                    "fontSize": 16,
                    "fontWeight": "400",
                    "lineHeight": 24,
                  },
                  Array [
                    Object {
                      "fontSize": 12,
                      "lineHeight": 16,
                      "marginRight": 4,
                    },
                    Object {
                      "color": "rgba(115, 115, 115, 1)",
                    },
                  ],
                ]
              }
            >
              Collaterals:
            </Text>
            <View
              style={
                Object {
                  "display": "flex",
                  "flexDirection": "row",
                }
              }
            />
          </View>
        </View>
      </View>
    </View>
    <View
      style={
        Object {
          "display": "flex",
          "flexDirection": "row",
          "flexWrap": "wrap",
          "marginBottom": -8,
        }
      }
    >
      <View
        style={
          Object {
            "marginBottom": 8,
            "width": "50%",
          }
        }
      >
        <Text
          style={
            Array [
              Object {
                "fontFamily": "RegularFont",
                "fontSize": 16,
                "fontWeight": "400",
                "lineHeight": 24,
              },
              Array [
                Object {
                  "fontSize": 12,
                  "lineHeight": 16,
                },
                Object {
                  "color": "rgba(115, 115, 115, 1)",
                },
              ],
            ]
          }
        >
          Total loan amount (USD)
        </Text>
        <Text
          style={
            Array [
              Object {
                "fontFamily": "RegularFont",
                "fontSize": 16,
                "fontWeight": "400",
                "lineHeight": 24,
              },
              Array [
                Array [
                  Object {
                    "fontFamily": "SemiBoldFont",
                    "fontSize": 14,
                    "fontWeight": "600",
                    "lineHeight": 20,
                  },
                  undefined,
                ],
                Object {
                  "color": "rgba(23, 23, 23, 1)",
                },
              ],
            ]
          }
        >
          $0
        </Text>
      </View>
      <View
        style={
          Object {
            "marginBottom": 8,
            "width": "50%",
          }
        }
      >
        <Text
          style={
            Array [
              Object {
                "fontFamily": "RegularFont",
                "fontSize": 16,
                "fontWeight": "400",
                "lineHeight": 24,
              },
              Array [
                Object {
                  "fontSize": 12,
                  "lineHeight": 16,
                },
                Object {
                  "color": "rgba(115, 115, 115, 1)",
                },
              ],
            ]
          }
        >
          Collateral amount (USD)
        </Text>
        <Text
          style={
            Array [
              Object {
                "fontFamily": "RegularFont",
                "fontSize": 16,
                "fontWeight": "400",
                "lineHeight": 24,
              },
              Array [
                Array [
                  Object {
                    "fontFamily": "SemiBoldFont",
                    "fontSize": 14,
                    "fontWeight": "600",
                    "lineHeight": 20,
                  },
                  undefined,
                ],
                Object {
                  "color": "rgba(23, 23, 23, 1)",
                },
              ],
            ]
          }
        >
          $0
        </Text>
      </View>
      <View
        style={
          Object {
            "marginBottom": 8,
            "width": "50%",
          }
        }
      >
        <Text
          style={
            Array [
              Object {
                "fontFamily": "RegularFont",
                "fontSize": 16,
                "fontWeight": "400",
                "lineHeight": 24,
              },
              Array [
                Object {
                  "fontSize": 12,
                  "lineHeight": 16,
                },
                Object {
                  "color": "rgba(115, 115, 115, 1)",
                },
              ],
            ]
          }
        >
          Collateral ratio
        </Text>
        <Text
          style={
            Array [
              Object {
                "fontFamily": "RegularFont",
                "fontSize": 16,
                "fontWeight": "400",
                "lineHeight": 24,
              },
              Array [
                Array [
                  Object {
                    "fontFamily": "SemiBoldFont",
                    "fontSize": 14,
                    "fontWeight": "600",
                    "lineHeight": 20,
                  },
                  undefined,
                ],
                Object {
                  "color": "rgba(23, 23, 23, 1)",
                },
              ],
            ]
          }
        >
          n/a
        </Text>
      </View>
    </View>
  </View>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "display": "flex",
          "flexDirection": "row",
          "flexWrap": "wrap",
          "marginBottom": -8,
          "marginTop": 16,
        },
        Object {
          "borderBottomColor": "rgba(229, 229, 229, 1)",
          "borderLeftColor": "rgba(229, 229, 229, 1)",
          "borderRightColor": "rgba(229, 229, 229, 1)",
          "borderTopColor": "rgba(229, 229, 229, 1)",
        },
      ]
    }
  >
    <View
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "rgba(255, 255, 255, 1)",
          "borderBottomColor": "rgba(212, 212, 212, 1)",
          "borderBottomLeftRadius": 4,
          "borderBottomRightRadius": 4,
          "borderBottomWidth": 1,
          "borderLeftColor": "rgba(212, 212, 212, 1)",
          "borderLeftWidth": 1,
          "borderRightColor": "rgba(212, 212, 212, 1)",
          "borderRightWidth": 1,
          "borderTopColor": "rgba(212, 212, 212, 1)",
          "borderTopLeftRadius": 4,
          "borderTopRightRadius": 4,
          "borderTopWidth": 1,
          "flexDirection": "row",
          "marginBottom": 8,
          "marginRight": 8,
          "opacity": 1,
          "paddingBottom": 4,
          "paddingLeft": 4,
          "paddingRight": 4,
          "paddingTop": 4,
        }
      }
    >
      <Text />
      <Text
        style={
          Array [
            Object {
              "fontFamily": "RegularFont",
              "fontSize": 16,
              "fontWeight": "400",
              "lineHeight": 24,
            },
            Array [
              Object {
                "fontFamily": "MediumFont",
                "fontSize": 14,
                "fontWeight": "500",
                "lineHeight": 16,
                "paddingLeft": 4,
                "paddingRight": 4,
              },
              Object {
                "color": "rgba(255, 0, 175, 1)",
              },
            ],
          ]
        }
      >
        EDIT COLLATERALS
      </Text>
    </View>
  </View>
</View>
`;
